# fluent-code

./: .gitignore  AGENTS.md  Cargo.toml  PLUGIN_AUTHORS.md  fluent-code.example.toml  opencode-workflow-report.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  provider.rs  runtime.rs  session.rs
crates/fluent-code-acp/: Cargo.toml
crates/fluent-code-acp/src/: dev_harness.rs  lib.rs  mapping.rs  protocol.rs  server.rs  transport.rs
crates/fluent-code-acp/src/server/: contract_tests.rs
crates/fluent-code-acp/tests/: cached_root_projection_exact_name_regressions.rs  direct_impl_public_server_satisfies_agent_trait.rs  task1_exact_name_regressions.rs  task3_exact_name_regressions.rs  task4_exact_name_regressions.rs  task6_exact_name_regressions.rs  task7_exact_name_regressions.rs  task8_exact_name_regressions.rs
crates/fluent-code-app/: Cargo.toml
crates/fluent-code-app/src/: agent.rs  bootstrap.rs  config.rs  error.rs  lib.rs  logging.rs  tool.rs
crates/fluent-code-app/src/app/: delegation.rs  message.rs  mod.rs  permissions.rs  recovery.rs  request_builder.rs  state.rs  update.rs
crates/fluent-code-app/src/host/: mod.rs
crates/fluent-code-app/src/plugin/: discovery.rs  host.rs  manifest.rs  mod.rs  registry.rs
crates/fluent-code-app/src/runtime/: mod.rs  orchestrator.rs
crates/fluent-code-app/src/session/: mod.rs  model.rs  store.rs
crates/fluent-code-app/tests/: bootstrap.rs  checkpoint_regressions.rs  host_wait_runtime_activity.rs  session_run_cache_regressions.rs  task1_exact_name_regressions.rs  task2_transcript_exact_name_regressions.rs  task3_transcript_exact_name_regressions.rs  task9_runtime_exact_name_regressions.rs
crates/fluent-code-provider/: Cargo.toml
crates/fluent-code-provider/src/: lib.rs  provider.rs  rig.rs
crates/fluent-code-provider/tests/: task9_exact_name_regressions.rs
crates/fluent-code-tui/: Cargo.toml
crates/fluent-code-tui/src/: acp.rs  conversation.rs  events.rs  lib.rs  markdown_render.rs  terminal.rs  theme.rs  ui_state.rs  view.rs
crates/fluent-code-tui/tests/: acp_default_render.rs  direct_impl_public_runtime_satisfies_client_trait.rs  history_cells.rs  startup.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs
docs/: agent-architecture-spec.md  opencode-delegated-scheduling.md  opencode-vs-fluent-code-architecture.md
examples/plugins/echo/: README.md  build.sh  plugin.toml
examples/plugins/echo/guest/: Cargo.toml
examples/plugins/echo/guest/src/: lib.rs
examples/plugins/echo/guest/wit/: plugin.wit
src/: lib.rs  main.rs
tests/: entrypoints.rs
