[workspace]
members = [
    ".",
    "crates/fluent-code-acp",
    "crates/fluent-code-app",
    "crates/fluent-code-provider",
    "crates/fluent-code-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
futures = "0.3"
glob = "0.3"
pulldown-cmark = "=0.13.3"
ratatui = "0.29"
regex = "1"
rig-core = "0.33.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syntect = "5"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = { version = "38.0.4", features = ["component-model"] }
wasmtime-wasi = "38.0.4"

[package]
name = "fluent-code"
version.workspace = true
edition.workspace = true

[dependencies]
fluent-code-acp = { path = "crates/fluent-code-acp" }
tokio.workspace = true
