[package]
name = "fluent-code-acp"
version.workspace = true
edition.workspace = true

[dependencies]
agent-client-protocol = "0.10.3"
async-trait = "0.1"
fluent-code-app = { path = "../fluent-code-app" }
fluent-code-provider = { path = "../fluent-code-provider" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
