[package]
name = "fluent-code-app"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
fluent-code-provider = { path = "../fluent-code-provider" }
glob.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
