[package]
name = "fluent-code-tui"
version.workspace = true
edition.workspace = true

[dependencies]
agent-client-protocol = "0.10.3"
async-trait = "0.1"
fluent-code-app = { path = "../fluent-code-app" }
chrono.workspace = true
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
tokio = { workspace = true, features = ["process"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
fluent-code-provider = { path = "../fluent-code-provider" }
