[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
agent-client-protocol.workspace = true
async-trait.workspace = true
chrono.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
futures.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
